--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ background-color:#333333 !important;
 
 .image{
 	display: flex;
+	margin-left: -33px;
 }
 .
 .image .detail h5{
@@ -366,7 +367,7 @@ background-color:#333333 !important;
     height: 2px;
 	width: 50px;
     background-color: #ff8b38;
-	margin-left: 48%;
+	margin: auto;
 }
 .awesome-text p{
 	margin-top: 20px;
@@ -412,4 +413,290 @@ background-color:#333333 !important;
 	font-size: 14px;
 	
 	color: #848484;
+}
+.pricing{
+	width: 100%;
+	background-color: #f5f5f5;
+	text-align: center;
+	padding: 60px 0px;
+
+}
+.content-text .line{
+	width: 50px;
+	background-color: #ff8b38;
+	height: 2px;
+	margin: 15px auto;
+
+}
+.content-text{
+	text-align: center;
+}
+
+
+.content-text h3{
+text-transform: uppercase;
+font-family: 'Raleway', sans-serif;
+font-size: 36px; 
+font-weight: 300px;
+
+}
+.content-text p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #848484;
+}
+
+.table-1{
+	margin: 0px 20px;
+}
+
+.table-1 .price-cat, .table-1 .price-body{
+	background-color: #333333;
+	
+}
+.table-1 .price-list{
+	background-color: white;
+
+
+}
+
+.price-body-list{
+	margin-top: 60px;
+}
+
+.table-1 .price-cat{
+		
+		padding: 10px;
+		border: solid white 1px;
+}
+.table-1 .price-cat p{
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700px;
+	font-size: 20px;
+
+}
+.table-1 .price-body{
+	padding: 20px 0px;
+	border-bottom: 5px solid #ff8b38;
+
+}
+
+.table-1 .price-body h1{
+	color: white;
+	font-family: 'Raleway', sans-serif;
+    font-size: 36px; 
+    font-weight: 700px;
+
+}
+
+.table-1 .price-body span{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 80px; 
+
+}
+.table-1 .price-body p{
+	color: #848484;
+	font-style: italic;
+	font-family: 'Open Sans', sans-serif;
+
+}
+
+.table-1 .price-list ul{
+	padding: 0px;
+	text-transform: uppercase;
+	color: #848484;
+}
+
+.table-1 .price-list ul li{
+	list-style: none;
+	border-bottom: solid #f5f5f5 1px;
+	padding: 10px 0px;
+
+}
+.middle .price-body{
+	border: 0px;
+	padding: 0px;
+
+}
+.special{
+	padding: 20px 0px;
+}
+.price-body .special span {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 80px; 
+}
+
+.special p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 600px;
+	font-size: 14px;
+
+}
+
+.popular{
+	background-color: #ff8b38;
+	padding: 10px 0px;
+
+}
+.popular p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 600px;
+	font-size: 14px;
+	font-style: normal !important;
+	color: white !important;
+
+}
+.pricing .row{
+	align-items: flex-end;
+
+}
+
+
+/**************
+testimonial
+***************/
+.testimonial{
+	width: 100%;
+	padding: 60px 0px;
+	text-align: center;
+}
+.message{
+	margin: 0px 20px;
+	padding: 20px;
+	text-align: left;
+	background-color: #f5f5f5;
+	position: relative;
+
+}
+
+.customer-reviw p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #848484;
+     width:72%;
+     font-style: italic;
+     border-radius: 5px;
+}
+.message .corner{
+
+	height: 50px;
+	width: 50px;
+	background-color: #f5f5f5;
+	position: absolute;
+	bottom: -20px;
+	left: 30px;
+	transform: rotate(45deg);
+
+}
+.user{
+	margin-top: 30px;
+}
+.user .col-md-4{
+   padding-right: 0px;
+}
+
+.user .col-md-8{
+   text-align: left;
+   padding-left: 0px;
+
+
+}
+.design{
+	width: 100%;
+	padding: 60px 0px;
+	background-image: url('../img/banner-two.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 50vh;
+}
+
+.design h3{
+	color: white;
+}
+
+.design .content-text button{
+	padding: 12px 25px;
+	background-color: transparent;
+	border: 2px solid white;
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
+	font-size: 16px;
+
+}
+.design .content-text .line{
+	background-color: white;
+}
+
+.contact-form{
+	width: 100%;
+	padding: 80px 0px;
+}
+.contact-form input{
+	font-family: 'Open Sans', sans-serif;
+    width: 95%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 15px;
+
+}
+textarea {
+    font-family: 'Open Sans', sans-serif;
+    width: 95%;
+    color: #cecece;
+    resize: none;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    height: 164px;
+    padding: 25px;
+}
+
+.contact-form button{
+	padding: 12px 25px;
+	background-color: #ff9b51;
+	border: 2px solid white;
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
+	font-size: 16px;
+	border-radius: 5px;
+	margin: 3% 42%;
+
+
+}
+.footer{
+	width: 100%;
+	padding: 60px 0px;
+	background-color: black;
+}
+
+.footer ul li{
+	list-style: none;
+	display: inline-block;
+
+
+}
+.footer ul li a{
+	color: #cccccc;
+	font-size: 24px;
+
+}
+
+.footer ul li a:hover{
+	border: 2px solid red;
+	transform: scale(1.3);
+	transition: 0.5s;
+}
+.footer .icon{
+	padding-left: 25%;
+}
+
+.footer p{
+	color: #cccccc;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	font-size: 14px;
+
 }
